--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,14 @@
   h1,
   h2,
   h3 {
-    text-align: center;
+    display: flex;
+    justify-content: center;
     margin: 0;
   }
   
   h1 {
     font-size: 80px;
+    margin-top: 10%
   }
   
   h2 {
@@ -56,11 +58,13 @@
     background: var(--primary-color);
     box-shadow: var(--box-shadow);
     color: white;
+    text-align: center;
   }
   
   .about-link {
     color: var(--primary-color);
     border: 1px solid var(--primary-color);
+    text-align: center;
   }
   
   .homepage-link {
